--- a/src/app/main/category-page/category-page.component.scss
+++ b/src/app/main/category-page/category-page.component.scss
@@ -1,7 +1,7 @@
 @import '../../../global';
 
 .category-header {
-    @include background('../../../assets/images/plates-header.jpg');
+    @include background('../../../assets/images/plates-header.jpg', center top);
     .category-text {
         height: 300px;
         margin: 20px auto;
@@ -22,4 +22,9 @@
             width: 40%;
         }
     }
+}
+
+.row.image-gallary{
+    width: 80%;
+    margin: 0 auto;
 }
