--- a/src/app/share/product-components/product-gallery-info/product-gallery-info.component.scss
+++ b/src/app/share/product-components/product-gallery-info/product-gallery-info.component.scss
@@ -1,3 +1,5 @@
+
+
 .gallery-product{
     img {
         width: 300px;
@@ -10,7 +12,7 @@
     display: none;
     position: absolute;
     top: 70px;
-    left: 120px;
+    left: 33%;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
