--- a/src/app/main/category-page/category-page.component.scss
+++ b/src/app/main/category-page/category-page.component.scss
@@ -1,30 +1,26 @@
-@import '../../../global';
+$Header-height: 200px;
 
 .category-header {
-    @include background('../../../assets/images/plates-header.jpg', center top);
-    .category-text {
-        height: 300px;
-        margin: 20px auto;
-        background: black;
+    position: relative;
+    * {
+        box-sizing: border-box; 
+    }
+    img {
+        width: 100%;
+        height: $Header-height;
+    }
+    .header-text {
+        padding: 10px 20px;
+        position: absolute;
+        top: 50%;
+        left:50%;
+        transform: translate(-50%, -50%);
+        height: $Header-height;
+        background: rgb(10, 10, 10);
         color: white;
+        width: 70%;
         border-left: 10px solid white;
         border-right: 10px solid white;
-        @include breakpoint(xs){
-            width: 100%;
-        }
-        @include breakpoint(sm){
-            width: 80%;
-        }
-        @include breakpoint(md){
-            width: 60%;
-        }
-        @include breakpoint(md){
-            width: 40%;
-        }
+        margin-bottom: 100px;
     }
-}
-
-.row.image-gallary{
-    width: 80%;
-    margin: 0 auto;
 }
