--- a/src/app/main/shopping-cart-page/shopping-cart-page.component.scss
+++ b/src/app/main/shopping-cart-page/shopping-cart-page.component.scss
@@ -1,39 +1,17 @@
-@import '../../../global';
-
 .shopping-cart {
     margin: 0;
     border: 0;
-    .header-lg{
-        text-align: center;
-        font-size: 36px;
-    }
-
     background-color: #E6EAED;
-    .cart-details{
-        @include breakpoint(xs){
-            width: 100%;
-        }
-        @include breakpoint(sm){
-            width: 100%;
-        }
-        @include breakpoint(md){
-            width: 60%;
-        }
-        @include breakpoint(md){
-            width: 40%;
-        }  
-       margin: 0 auto;
-       padding: 0 0 0 0;
-       background-color: white;
-
-       #order-summary{
-        width: 250px;
-        margin-left: 550px;
+    .cart-header{
+        text-align: center;
+        font-size: 24px;
         margin-bottom: 20px;
-        margin-top: 20px;
-        
+        margin-top: 10px;
     }
 
+    .cart-details{
+       width: 60%; 
+       margin: 0 auto;
     }
 
 }
