--- a/src/app/share/product-components/product-gallery-info/product-gallery-info.component.scss
+++ b/src/app/share/product-components/product-gallery-info/product-gallery-info.component.scss
@@ -1,18 +1,18 @@
-
-
 .gallery-product{
     img {
         width: 300px;
         height: 300px;
     }
     text-align: center;
+    margin-top: 20px;
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
-    top: 70px;
-    left: 33%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
