--- a/src/global.scss
+++ b/src/global.scss
@@ -7,20 +7,12 @@
     background-size: auto;
 }
 @mixin breakpoint($class) {
-    @if $class == xs {
+    @if $class == mobile {
       @media (max-width: 767px) { @content; }
     }
    
-    @else if $class == sm {
+    @else if $class == desktop {
       @media (min-width: 768px) { @content; }
-    }
-   
-    @else if $class == md {
-      @media (min-width: 992px) { @content; }
-    }
-   
-    @else if $class == lg {
-      @media (min-width: 1200px) { @content; }
     }
    
     @else {
